# software-on-silicon

./: .clang_format  .gitignore  .gitmodules  CMakeLists.txt  README  README.md
alsa-test/: CMakeLists.txt  MMAP_INTERLEAVED.cpp  MMAP_NONINTERLEAVED.cpp  POLL.cpp  RW_INTERLEAVED.cpp
impl/: ByteWiseTransfer.cpp  Controller.cpp  EventLoop.cpp  MCUFPGA.cpp  MemoryController.cpp  MemoryControllerAudio.cpp  RingBuffer.cpp  RingToMemory.cpp  Sample.cpp  error.cpp
impl/MCUFPGA/: DMA.cpp  SymbolRateCounter.cpp  TrueColor.cpp
include/software-on-silicon/: ByteWiseTransfer.hpp  Controller.hpp  EventLoop.hpp  HostMemoryController.hpp  INTERFACE.hpp  MCUFPGA.hpp  MemoryController.hpp  ProcessorArray.hpp  RingBuffer.hpp  RingToMemory.hpp  Serial.hpp  SerialNotifier.hpp  TypedWires.hpp  alsa_helpers.hpp  alsa_memorycontroller.hpp  alsa_ringbuffer.hpp  arafallback_helpers.hpp  cpp11.hpp  cpp14.hpp  cpp17.hpp  error.hpp  helpers.hpp  loop_helpers.hpp  mcufpga_helpers.hpp  memorycontroller_helpers.hpp  ringbuffer_helpers.hpp  ringbuffer_helpers_alsa.hpp  rtos_helpers.hpp  serial_helpers.hpp  simulation_helpers.hpp
stage5/: DescriptorHelper.c  DescriptorHelper.cpp  applyTuple.cpp  cpp11.hpp  cpp17.hpp
test/: Controller.cpp  EventLoop.cpp  HostMemoryController.cpp  MemoryController.cpp  ProcessorArray.cpp  RingBuffer.cpp  RingToMemory.cpp  TypedWires.cpp  dummy_arrayOfReferences.cpp  dummy_atomicArrays.cpp  dummy_atomicStruct.cpp  dummy_atomicTuples.cpp  dummy_baseclassmembers.cpp  dummy_constCable.cpp  dummy_emptyAtomic.cpp  dummy_generator.cpp  test_controller.cpp  test_eventloop.cpp  test_mcufpga.cpp  test_memorycontroller.cpp  test_memorycontrolleraudio.cpp  test_ringbuffer.cpp  test_ringbufferaudio.cpp  test_ringtomemory.cpp  test_ringtomemoryaudio.cpp
test/stage2/: dummy_assemble.cpp  dummy_dmaApply.cpp  dummy_dmaTemplate.cpp  dummy_vectorBlocks.cpp
test/stage3/: dummy_bitsetAssignement.cpp  dummy_sizecheck.cpp
